# cpp_utils

./: .gitignore  CMakeLists.txt
_test/: CMakeLists.txt  a.out  test10.cpp  test4.cpp
_test/.cache/clangd/index/: test8.cpp.6AA494A766726B5D.idx  test9.cpp.FADD95D640815DD8.idx
docs/: brief.md
graphics/: gnuplot_helper.hpp  raster.hpp  rotation_matrix.hpp
io/: wav.hpp
math/: NewMHJ.hpp  constants.hpp  differentiate.hpp  function_derivative.hpp  hooke_jeeves.hpp  integrate.hpp  sampling.hpp
physics/: boundary_condition.hpp  rigid_body.hpp
qt/: equidistant_plot.h  signal_constellation.h
signal_processing/: fft.hpp  filter.hpp  gold_code.hpp  modulation.hpp  signal.hpp  signal_processing.hpp  signal_processing_utils.hpp  signals.hpp  vector_operations.hpp  windows.hpp
testing/: CMakeLists.txt  a.out  bit_packing.hpp  combinations.hpp  periodic_operator.hpp  sampling.hpp  test.cpp  utils.hpp
testing/.cache/clangd/index/: bit_packing.hpp.05D29E00D234A4D7.idx  combinations.hpp.4FAF38E43C07E7D9.idx  sampling.hpp.0C5DDB5202F79855.idx  sampling.hpp.80AB987E3E5EE730.idx  test.cpp.5DCC45229314E4F9.idx  utils.hpp.9A4A0E43BDEA220F.idx  utils.hpp.B7BC96A266451F30.idx
tests/: CMakeLists.txt  test.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test2.cpp  test3.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
tests/.cache/clangd/index/: test.cpp.6526B18F0D10E98F.idx  (+2 more)
tests/math/: CMakeLists.txt  deriv_test.cpp
utils/: adaptive_resolution_vector.hpp  aliases.hpp  array2d.hpp  fast_plot.hpp  table.hpp  time_flow_program.hpp
